[package]
name = "convat-csv2json"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "convat-csv2json"
path = "src/main.rs"
